<resources>
    <string name="app_name">RayshaOlshop</string>

    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="signup">Sign Up</string>
    <string name="sudahada">Sudah punya akun ?</string>
    <string name="signin">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>